syntax = "proto3";

package example.enumerations;

option go_package = "ea.com/proto";

enum AccountStatus {
  ACTIVE_STATUS_UNSPECIFIED = 0;
  ACTIVE_STATUS_ACTIVE = 1;
  ACTIVE_STATUS_INACTIVE = 2;
}

message AccountStatusEnum {
  AccountStatus active_status_active = 1;
}