syntax = "proto3";

package example.maps;

option go_package = "ea.com/proto";

message IdWrapper {
  uint32 id = 1;
}

message UserIdMap {
  map<string, IdWrapper> ids = 1;
}